observation-form fix spacing

--- a/src/app/+observation/form/observation-form.component.scss
+++ b/src/app/+observation/form/observation-form.component.scss
@@ -36,11 +36,18 @@
 
 .top-section {
   padding: 15px;
+  > * {
+    margin-bottom: 10px;
+  }
 }
 
 .laji-panel {
   background-color: $neutral-2;
   box-shadow: 0 1px 3px 0 $neutral-4;
+  margin-bottom: 10px;
+}
+
+:host ::ng-deep .panel-body > * {
   margin-bottom: 10px;
 }
 
@@ -55,27 +62,13 @@ hr {
   border: none;
   box-shadow: none;
 }
-.result-list {
-  display: flex;
-  flex-direction: column;
-}
-.taxon-panel {
-  background-color: #ffffff;
-  margin: -15px;
-  padding: 15px;
-}
-.lj-input-wrap {
-  padding: 0 15px;
-}
+
 label {
   display: inline;
 }
 
 :host ::ng-deep p {
   font-size: small;
-}
-.switch-label {
-  margin-left: 5px;
 }
 .small-label {
   font-weight: normal;
